# Chess

./: CMakeLists.txt  ChessMain.sln  Readme.md
ChessMain/: Bishop.h  CastlingCommand.cpp  CastlingCommand.h  CastlingCommandTest.cpp  CastlingCommandTest.h  Cell.h  Chess.cpp  Chess.h  ChessMain.cpp  ChessMain.vcxproj  ChessMain.vcxproj.filters  Command.h  CommandHolder.cpp  CommandHolder.h  ConsolePresenter.cpp  ConsolePresenter.h  Constants.h  Coordinate.h  Desk.cpp  Desk.h  DeskViewer.cpp  DeskViewer.h  DeskViewerTest.cpp  DeskViewerTest.h  Figure.h  Horse.h  King.h  MoveCommand.cpp  MoveCommand.h  MoveCommandTest.cpp  MoveCommandTest.h  Pawn.h  Presenter.h  Queen.h  Rook.h  SfmlControlManager.cpp  SfmlControlManager.h
ChessMain/resourses/: chess_diagram.drawio
src/: CMakeLists.txt
src/logic/chess/cpp/: CommandHolder.cpp  Desk.cpp  SfmlControlManager.cpp
src/logic/chess/hdr/: Cell.h  Constants.h  Coordinate.h  Presenter.h  SfmlControlManager.h
src/logic/commands/cpp/: CastlingCommand.cpp  MoveCommand.cpp
src/logic/commands/hdr/: CastlingCommand.h
src/logic/figures/: Bishop.h  Figure.h  Pawn.h  Rook.h
src/tests/cpp/: MoveCommandTest.cpp
